# liara-core

./: CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md  book.toml  manifest.json  vcpkg.json
docs/: book.liaradoc.json
include/liara/core/: LiaraCore.h  config.h.in
src/: core.cpp
tests/: CMakeLists.txt  test_core_cxx.cpp
